// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      class="Icon Icon--small Icon--muted Select__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
      />
    </svg>
  </div>
</div>
`;

exports[`renders the component as disabled 1`] = `
<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select Select--disabled"
      data-test-id="cf-ui-select"
      disabled=""
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      class="Icon Icon--small Icon--muted Select__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
      />
    </svg>
  </div>
</div>
`;

exports[`renders the component as required 1`] = `
<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      class="Icon Icon--small Icon--muted Select__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
      />
    </svg>
  </div>
</div>
`;

exports[`renders the component with a help text 1`] = `
<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      class="Icon Icon--small Icon--muted Select__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
      />
    </svg>
  </div>
  <div
    class="SelectField__hints"
  >
    <p
      class="HelpText SelectField__help-text"
      data-test-id="cf-ui-help-text"
    >
      please select an option
    </p>
  </div>
</div>
`;

exports[`renders the component with a validation message 1`] = `
<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select Select--negative"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      class="Icon Icon--small Icon--muted Select__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
      />
    </svg>
  </div>
  <div
    class="ValidationMessage SelectField__validation-message"
    data-test-id="cf-ui-validation-message"
  >
    <svg
      class="Icon Icon--small Icon--negative ValidationMessage__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 24 24"
      width="1em"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
      />
    </svg>
    <p
      class="ValidationMessage__text"
    >
      not valid
    </p>
  </div>
</div>
`;

exports[`renders the component with a value 1`] = `
<div
  class="SelectField"
  data-test-id="cf-ui-select-field"
>
  <div
    class="SelectField__label-wrapper"
  >
    <label
      class="FormLabel"
      data-test-id="cf-ui-form-label"
      for="optionSelect"
    >
      Label
    </label>
  </div>
  <div
    class="Select__wrapper Select--full"
  >
    <select
      aria-label="optionSelect"
      class="Select"
      data-test-id="cf-ui-select"
      id="optionSelect"
      name="optionSelect"
    >
      <option
        data-test-id="cf-ui-select-option"
        value="optionOne"
      >
        Option 1
      </option>
    </select>
    <svg
      class="Icon Icon--small Icon--muted Select__icon"
      data-test-id="cf-ui-icon"
      height="1em"
      viewBox="0 0 18 18"
      width="1em"
    >
      <path
        d="M3.96967 6.21967C4.26256 5.92678 4.73744 5.92678 5.03033 6.21967L9 10.1893L12.9697 6.21967C13.2626 5.92678 13.7374 5.92678 14.0303 6.21967C14.3232 6.51256 14.3232 6.98744 14.0303 7.28033L9.53033 11.7803C9.23744 12.0732 8.76256 12.0732 8.46967 11.7803L3.96967 7.28033C3.67678 6.98744 3.67678 6.51256 3.96967 6.21967Z"
      />
    </svg>
  </div>
</div>
`;
